# streamlit-flow

./: .gitignore  example.py  pyproject.toml
streamlit_flow/: __init__.py  base_edge.py  base_node.py  diagram.py  edge.py  elements.py  handle.py  layouts.py  maarker.py  markdown_edge.py  markdown_node.py  marker.py  state.py  streamlit_flow_edge.py  streamlit_flow_handle.py  streamlit_flow_markdown_node.py  streamlit_flow_marker.py  streamlit_flow_node.py  streamlit_flow_state.py
streamlit_flow/frontend/: package-lock.json  package.json
streamlit_flow/frontend/src/: StreamlitFlowComponent.jsx  style.css
streamlit_flow/frontend/src/components/: StreamlitFlowHandle.jsx  StreamlitFlowMarkdownEdge.jsx  StreamlitFlowMarkdownNode.jsx
